fixing the gaps between boxes

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ body {
   color: hsl(0, 0%, 81%);
   font-size: 81.25%; // 13px
   font-family: 'Barlow Semi Condensed', sans-serif;
-  line-height: 20px;
+  // line-height: 20px;
   background-color: hsl(210, 46%, 95%);
 }
 
